--- a/taskgv-front/src/scss/components/Workspace.scss
+++ b/taskgv-front/src/scss/components/Workspace.scss
@@ -16,7 +16,6 @@
 }
 
 .workspace__side__left__wrapper {
-    //position: fixed;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -25,37 +24,15 @@
 .workspace__body {
     display: flex;
     flex-direction: column;
-    //flex-grow: 100;
     height: 92vh;
-    //overflow: scroll;
 }
 .workspace__head {
     display: flex;
     justify-content: flex-end;
 }
 
-.workspace__main {
-    //display: flex;
-    //flex-grow: 100;
-    //max-width: 100vw;
-}
-
-//.component__box {
+//.workspace__main {
 //    display: flex;
-//    background-color: lightgray;
-//    width: 100%;
-//    flew-grow: auto;
-//    border-radius: 10px;
-//    margin: 0em .7em .7em 0em;
-//    @include portrait-phone {
-//        width: 100%;
-//        height: 92vh;
-//        margin: 0.7rem;
-//    }
-//    @include tablet-p_phone-l {
-//        width: 100vw;
-//        height: 85vh;
-//        margin: 0.7rem;
-//    }
 //}
+
 
